--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "sonner": "^1.7.4",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
+    "vaul": "latest",
     "zod": "3.25.67"
   },
   "devDependencies": {
